--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
     "firebase": "^8.2.6",
+    "lodash": "^4.17.20",
     "marked": "^1.2.8",
     "postcss": "^7.0.35",
     "remove-markdown": "^0.3.0",
